--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Categories</a>
+                    <a class="nav-link" href="/New-Pitch">New Pitch</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/">Profile</a>
