Added the auth to tha main app

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
 {% endblock %}
 {% block scripts %}
 <!-- jQuery -->
-<script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 
 <!-- Popper.js -->
 <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
