--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,43 @@
 {% extends "base.html"%}
+{% import "pitch_macros.html" as macro %}
 
 {% block content %}
     <h2 class="h1"> Home</h2>
+    <div  class="container">
+        <h2 class="text-center" id="posts">All Pitches</h2>
+        <ul class="nav nav-pills nav-justified nav-fill " role="tablist">
+            <li class="nav-item" >
+                <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id ="cats" data-toggle="tab" href="#startup">Startup Pitches</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id ="cats" data-toggle="tab" href="#idea">Idea Pitches</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " id ="cats"data-toggle="tab" href="#funding">Funding Pitches</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id ="cats"data-toggle="tab" href="#event">Event Pitches</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div  class="container tab-pane active" id="all"><br>
+                {{ macro.show(all_pitches) }}
+            </div>
+            <div  class="container tab-pane fade " id="startup"><br>
+                {{ macro.show(startup_pitches) }}
+            </div>
+            <div  class="container tab-pane fade " id="idea"><br>
+                {{ macro.show(startup_pitches) }}
+            </div>
+            <div  class="container tab-pane fade " id="funding"><br>
+                {{ macro.show(startup_pitches) }}
+            </div>
+            <div  class="container tab-pane fade " id="event"><br>
+                {{ macro.show(startup_pitches) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
